@startuml ptracer

' 定义接口
interface Handler {
    +Handle(*Context): TraceAction
    +Debug(...interface{})
}

interface Runner {
    +Start(): (int, error)
}

' 定义主类
class Tracer {
    +Handler
    +Runner
    +Limit
    +Trace(context.Context): Result
}

' 定义处理类
class ptraceHandle {
    +*Tracer
    +pgid: int
    +traced: map[int]bool
    +execved: bool
    +fTime: time.Time
    +handle(pid int, wstatus): (status, exitStatus, errStr, finished)
    +handleTrap(pid int): error
}

' 定义关系
Tracer o-- Handler : contains
Tracer o-- Runner : contains
ptraceHandle *-- Tracer : embeds

@enduml